# GEMA

./: .gitignore  CMakeLists.txt  README.md  generate_parallel_tests.sh  how_to_install_acpp.md  make.ps1  make.sh  run.ps1  ŠpaňúrM_KnihovnaProPraci_JM_2026.docx
run/: clean.ps1  make.ps1  run.ps1
run/linux/: clean.sh  make.sh  run.sh
run/windows/: make.ps1  run.ps1
src/core/: AbstractOperation.hpp  AbstractOperation.tpp  AlignedAllocator.hpp  ITensor.hpp  LinearContainer.hpp  LinearContainer.tpp  LinearContainerConcept.hpp  Main.cpp  Matrix.hpp  Matrix.tpp  MatrixParallel.hpp  MatrixParallel.tpp  MemoryBackend.hpp  MemoryBackend.tpp  MemoryBackendConcept.hpp  MemoryBackendUSM.hpp  MemoryBackendUSM.tpp  NTree.hpp  Tensor.cpp  Tensor.hpp  Tensor.tpp  TensorConcept.hpp  TensorConcepts.hpp  TensorParallel.hpp  TensorParallel.tpp  Utils.hpp
src/misc/: README.txt
src/run/: clean.ps1  make.ps1
src/test/: TestTensor.cpp
src/unused/: Equals.cpp  IEquals.hpp
test/src/core/: Acpp_test.cpp  TensorParallel_stress.cpp  TensorParallel_test.cpp  Tensor_stress.cpp  Tensor_test.cpp  TestTensor.cpp  TestUtils.hpp
